<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="find_discover_choose_what_you_want">Find, Discover ,Choose and Buy what you want</string>
    <string name="already_you_have_account">Already Have Account ? Login </string>
    <string name="join_now">Join Now</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="login_admins">Login Admins</string>
    <string name="i_m_an_admin">I am an admin</string>
    <string name="i_am_not_admin">I am not admin</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="create">Create</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="category">Category</string>
    <string name="setting">Setting</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile">change profile</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="your_city_name">your city name</string>
    <string name="your_home_address">your home address</string>
    <string name="your_phone_number">your phone number</string>
    <string name="your_name">your Name</string>
    <string name="please_write_your_shipment_details">Please write your shipment Details</string>
    <string name="confirm">Confirm</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="logout">Logout</string>
    <string name="new_orders">New Orders</string>
    <string name="products">Products</string>
    <string name="set_security_questions">Set Security Questions</string>
    <string name="reset_password">Reset Password</string>
    <string name="answer_the_following_security_question">Answer The following Security Question ?</string>
    <string name="please_write_your_number_phone">Please write your number phone</string>
    <string name="where_your_parent_met_first_time">Where your parent met first time ?</string>
    <string name="whats_your_favourite_super_hero">whats your favourite super hero ?</string>
    <string name="verify">Verify</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shop_bussiness_address">Shop-Bussiness Address</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="register">Register</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="seller_registration_form">Seller Registration Form</string>
    <string name="maintain">Maintain</string>
    <string name="welcome_dear_admin">Welcome Dear Admin</string>
    <string name="check_and_approve_new_orders">Check and Approve new Orders</string>
    <string name="approve_new_products">Approve New Products</string>
    <string name="my_all_products">My All products</string>

</resources>