<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminHomeActivity">
    <TextView
        android:id="@+id/admin_home_tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_dear_admin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:id="@+id/ad_home_btn_maintain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maintain"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_below="@+id/admin_home_tv_welcome"
        android:background="@drawable/btn_shape"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"

        />
    <Button
        android:id="@+id/ad_home_btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:text="@string/check_new_orders"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/ad_home_btn_maintain"

        />
    <Button
        android:id="@+id/ad_home_btn_check_approve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:textAllCaps="false"
        android:text="@string/check_and_approve_new_orders"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/ad_home_btn_check"

        />

    <Button
        android:id="@+id/ad_home_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/btn_shape"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"

        />

</RelativeLayout>