<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyers.ResetPasswordActivity">
    <RelativeLayout
        android:id="@+id/reset_password_relativeTop"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/reset_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/reset_password"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

    </RelativeLayout>
    <EditText
        android:id="@+id/reset_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_relativeTop"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_shape"
        android:padding="12dp"
        android:hint="@string/please_write_your_number_phone"
        />
    <TextView
        android:id="@+id/reset_password_text_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset_et_phone"
        android:text="@string/answer_the_following_security_question"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/reset_et_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_text_answer"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_shape"
        android:padding="12dp"
        android:hint="@string/where_your_parent_met_first_time"
        />
    <EditText
        android:id="@+id/reset_et_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reset_et_question1"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_shape"
        android:padding="12dp"
        android:hint="@string/whats_your_favourite_super_hero"
        />
    <Button
        android:id="@+id/reset_btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reset_et_question2"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_shape"
        android:padding="12dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>