<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".buyers.LoginActivity">
    <ImageView
        android:id="@+id/login_applogo_iv"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:src="@drawable/applogo"
        />
    <EditText
        android:id="@+id/login_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_applogo_iv"
        android:textAllCaps="false"
        android:hint="@string/enter_your_phone"
        android:textColor="@color/white"
        android:inputType="phone"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/input_shape"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_et"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/input_shape"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_et"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/login_checkbox"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"

            app:cbd_strokeColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/login_forget_tv"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"

            />

    </LinearLayout>


    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login_linear"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/login_admin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_an_admin"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/login_login_btn"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/login_not_admin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_not_admin"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/login_login_btn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        />


</RelativeLayout>