<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sellers.SellerAddNewProductsActivity">
    <ImageView
        android:id="@+id/ad_new_product_iv_add_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/select_product_image"
        android:scaleType="centerCrop"
        android:cropToPadding="false"
        android:layout_marginTop="30dp"

        />
    <EditText
        android:id="@+id/ad_new_product_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_new_product_iv_add_image"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/input_shape"
        android:hint="@string/product_name"
        android:textSize="25sp"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/ad_new_product_et_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_new_product_et_name"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/input_shape"
        android:hint="@string/product_description"
        android:textSize="25sp"
        android:padding="20dp"
        />


    <EditText
        android:id="@+id/ad_new_product_et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_new_product_et_des"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/input_shape"
        android:hint="@string/product_price"
        android:textSize="25sp"
        android:padding="20dp"
        />
    <Button
        android:id="@+id/ad_new_product_btn_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_new_product_et_price"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_shape"
        android:text="@string/add_product"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        />

</RelativeLayout>