<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="30dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/product_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            />
        <ImageView
            android:id="@+id/product_item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_below="@+id/product_item_name"

            />
        <TextView
            android:id="@+id/product_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/product_price"
            android:textColor="@color/colorPrimary"
            android:layout_marginVertical="5dp"
            android:layout_below="@+id/product_item_image"
            />

        <TextView
            android:id="@+id/product_item_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/product_description"
            android:textColor="@color/colorPrimary"
            android:layout_marginVertical="5dp"
            android:layout_below="@+id/product_item_price"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>